Upgrade to Java 17 (next LTS)